--- a/SIM900_SMSReceive_TM4C123/Objects/BlankProjekt_TM4C.build_log.htm
+++ b/SIM900_SMSReceive_TM4C123/Objects/BlankProjekt_TM4C.build_log.htm
@@ -21,12 +21,16 @@ Target DLL:      lmidk-agdi.dll V???
 Dialog DLL:      TCM.DLL V1.21.0.0
  
 <h2>Project:</h2>
-C:\Users\alexandru.gaal\Documents\SIM900_SMSReceiveTest_TM4C123_WIP_UARTSTDIO_single_read_modified\SIM900_SMSReceiveTest_TM4C123.uvprojx
-Project File Date:  05/18/2017
+C:\Users\alexandru.gaal\Documents\Embedded_Programs\SIM900_SMSReceive_TM4C123\SIM900_SMSReceiveTest_TM4C123.uvprojx
+Project File Date:  05/24/2017
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Build target 'Target 1'
+Rebuild target 'Target 1'
+assembling startup_TM4C123.s...
+compiling pc_display.c...
+compiling fifo.c...
+compiling uart_handler.c...
 compiling GSM.c...
 GSM.c(55): warning:  #177-D: variable "lineCount"  was declared but never referenced
   	uint8_t lineCount = 0;
@@ -47,9 +51,15 @@ GSM.c(103): warning:  #177-D: variable "time"  was declared but never referenced
 GSM.c(44): warning:  #177-D: variable "msgReadRepeatIndex"  was declared but never referenced
   static uint8_t msgReadRepeatIndex = 0;
 GSM.c: 9 warnings, 0 errors
+compiling main.c...
+main.c(34): warning:  #177-D: variable "GSMcommand"  was declared but never referenced
+  	uint8_t *GSMcommand;
+main.c: 1 warning, 0 errors
+compiling system_TM4C123.c...
+compiling uartstdio.c...
 linking...
 Program Size: Code=6700 RO-data=2092 RW-data=1644 ZI-data=12372  
-".\Objects\BlankProjekt_TM4C.axf" - 0 Error(s), 9 Warning(s).
+".\Objects\BlankProjekt_TM4C.axf" - 0 Error(s), 10 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -66,7 +76,7 @@ Package Vendor: Keil
    * Component: Startup Version: 1.0.1
 
 <h2>Collection of Component include folders:</h2>
-  C:\Users\alexandru.gaal\Documents\SIM900_SMSReceiveTest_TM4C123_WIP_UARTSTDIO_single_read_modified\RTE\_Target_1
+  C:\Users\alexandru.gaal\Documents\Embedded_Programs\SIM900_SMSReceive_TM4C123\RTE\_Target_1
   C:\Keil_v5\ARM\PACK\ARM\CMSIS\5.0.0\CMSIS\Include
   C:\Keil_v5\ARM\PACK\Keil\TM4C_DFP\1.1.0\Device\Include\TM4C123
 
