cleaned up code of SIM900 SMS receive program

--- a/SIM900_SMSReceive_TM4C123/Objects/BlankProjekt_TM4C.build_log.htm
+++ b/SIM900_SMSReceive_TM4C123/Objects/BlankProjekt_TM4C.build_log.htm
@@ -22,44 +22,15 @@ Dialog DLL:      TCM.DLL V1.21.0.0
  
 <h2>Project:</h2>
 C:\Users\alexandru.gaal\Documents\Embedded_Programs\SIM900_SMSReceive_TM4C123\SIM900_SMSReceiveTest_TM4C123.uvprojx
-Project File Date:  05/24/2017
+Project File Date:  05/27/2017
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Rebuild target 'Target 1'
-assembling startup_TM4C123.s...
-compiling pc_display.c...
-compiling fifo.c...
+Build target 'Target 1'
 compiling uart_handler.c...
-compiling GSM.c...
-GSM.c(55): warning:  #177-D: variable "lineCount"  was declared but never referenced
-  	uint8_t lineCount = 0;
-GSM.c(86): warning:  #177-D: variable "i"  was declared but never referenced
-  	uint8_t i,j = 0;
-GSM.c(86): warning:  #177-D: variable "j"  was declared but never referenced
-  	uint8_t i,j = 0;
-GSM.c(87): warning:  #177-D: variable "c"  was declared but never referenced
-  	char c;
-GSM.c(100): warning:  #177-D: variable "message"  was declared but never referenced
-  	char message[200];
-GSM.c(101): warning:  #177-D: variable "continue_reading"  was declared but never referenced
-  	char continue_reading = 1;
-GSM.c(102): warning:  #177-D: variable "index"  was declared but never referenced
-  	char index = 0;
-GSM.c(103): warning:  #177-D: variable "time"  was declared but never referenced
-  	uint32_t time = 500000;
-GSM.c(44): warning:  #177-D: variable "msgReadRepeatIndex"  was declared but never referenced
-  static uint8_t msgReadRepeatIndex = 0;
-GSM.c: 9 warnings, 0 errors
-compiling main.c...
-main.c(34): warning:  #177-D: variable "GSMcommand"  was declared but never referenced
-  	uint8_t *GSMcommand;
-main.c: 1 warning, 0 errors
-compiling system_TM4C123.c...
-compiling uartstdio.c...
 linking...
 Program Size: Code=6700 RO-data=2092 RW-data=1644 ZI-data=12372  
-".\Objects\BlankProjekt_TM4C.axf" - 0 Error(s), 10 Warning(s).
+".\Objects\BlankProjekt_TM4C.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -88,7 +59,7 @@ Package Vendor: Keil
       Include file:  Device\Include\TM4C123\TM4C123.h
       Source file:   Device\Source\ARM\startup_TM4C123.s
       Source file:   Device\Source\system_TM4C123.c
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
