--- a/SIM900_SMSReceive_TM4C123/Objects/BlankProjekt_TM4C.build_log.htm
+++ b/SIM900_SMSReceive_TM4C123/Objects/BlankProjekt_TM4C.build_log.htm
@@ -3,39 +3,57 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Tool Versions:</h2>
-IDE-Version: µVision V5.22.0.0
+IDE-Version: µVision V5.21.1.0
 Copyright (C) 2016 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Gaal Alexandru, None, LIC=----
+License Information: Gaal Alexandru, Home, LIC=----
  
 Tool Versions:
-Toolchain:       MDK-Lite  Version: 5.22
-Toolchain Path:  C:\Keil_v5\ARM\ARMCC\Bin
-C Compiler:      Armcc.exe V5.06 update 4 (build 422)
-Assembler:       Armasm.exe V5.06 update 4 (build 422)
-Linker/Locator:  ArmLink.exe V5.06 update 4 (build 422)
-Library Manager: ArmAr.exe V5.06 update 4 (build 422)
-Hex Converter:   FromElf.exe V5.06 update 4 (build 422)
-CPU DLL:         SARMCM3.DLL V5.22
-Dialog DLL:      DCM.DLL V1.13.9.0
+Toolchain:       MDK-Lite  Version: 5.21a
+Toolchain Path:  F:\0_Tools\Keil_v5\ARM\ARMCC\Bin
+C Compiler:      Armcc.exe V5.06 update 3 (build 300)
+Assembler:       Armasm.exe V5.06 update 3 (build 300)
+Linker/Locator:  ArmLink.exe V5.06 update 3 (build 300)
+Library Manager: ArmAr.exe V5.06 update 3 (build 300)
+Hex Converter:   FromElf.exe V5.06 update 3 (build 300)
+CPU DLL:         SARMCM3.DLL V5.21a
+Dialog DLL:      DCM.DLL V1.13.8.0
 Target DLL:      lmidk-agdi.dll V???
-Dialog DLL:      TCM.DLL V1.21.0.0
+Dialog DLL:      TCM.DLL V1.14.14.0
  
 <h2>Project:</h2>
-C:\Users\alexandru.gaal\Documents\Embedded_Programs\SIM900_SMSReceive_TM4C123\SIM900_SMSReceiveTest_TM4C123.uvprojx
-Project File Date:  05/27/2017
+F:\1_Projects\Embedded_Programs\SIM900_SMSReceive_TM4C123\SIM900_SMSReceiveTest_TM4C123.uvprojx
+Project File Date:  06/13/2017
 
 <h2>Output:</h2>
-*** Using Compiler 'V5.06 update 4 (build 422)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Build target 'Target 1'
+*** Using Compiler 'V5.06 update 3 (build 300)', folder: 'F:\0_Tools\Keil_v5\ARM\ARMCC\Bin'
+Rebuild target 'Target 1'
+compiling GSM.c...
+GSM.c(99): warning:  #177-D: variable "message" was declared but never referenced
+  	char message[200];
+GSM.c(100): warning:  #177-D: variable "continue_reading" was declared but never referenced
+  	char continue_reading = 1;
+GSM.c(101): warning:  #177-D: variable "index" was declared but never referenced
+  	char index = 0;
+GSM.c(102): warning:  #177-D: variable "time" was declared but never referenced
+  	uint32_t time = 500000;
+GSM.c: 4 warnings, 0 errors
+compiling main.c...
+main.c(34): warning:  #177-D: variable "GSMcommand" was declared but never referenced
+  	uint8_t *GSMcommand;
+main.c: 1 warning, 0 errors
+compiling pc_display.c...
 compiling uart_handler.c...
+assembling startup_TM4C123.s...
+compiling uartstdio.c...
+compiling system_TM4C123.c...
 linking...
-Program Size: Code=6700 RO-data=2092 RW-data=1644 ZI-data=12372  
-".\Objects\BlankProjekt_TM4C.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=6700 RO-data=2092 RW-data=1644 ZI-data=12356  
+".\Objects\BlankProjekt_TM4C.axf" - 0 Error(s), 5 Warning(s).
 
 <h2>Software Packages used:</h2>
 
 Package Vendor: ARM
-                http://www.keil.com/pack/ARM.CMSIS.5.0.0.pack
+                http://www.keil.com/pack/ARM.CMSIS.5.0.0-Beta12.pack
                 ARM::CMSIS:CORE:5.0.0
                 CMSIS (Cortex Microcontroller Software Interface Standard)
    * Component: CORE Version: 5.0.0
@@ -47,9 +65,9 @@ Package Vendor: Keil
    * Component: Startup Version: 1.0.1
 
 <h2>Collection of Component include folders:</h2>
-  C:\Users\alexandru.gaal\Documents\Embedded_Programs\SIM900_SMSReceive_TM4C123\RTE\_Target_1
-  C:\Keil_v5\ARM\PACK\ARM\CMSIS\5.0.0\CMSIS\Include
-  C:\Keil_v5\ARM\PACK\Keil\TM4C_DFP\1.1.0\Device\Include\TM4C123
+  F:\1_Projects\Embedded_Programs\SIM900_SMSReceive_TM4C123\RTE
+  F:\0_Tools\Keil_v5\ARM\PACK\ARM\CMSIS\5.0.0-Beta12\CMSIS\Include
+  F:\0_Tools\Keil_v5\ARM\PACK\Keil\TM4C_DFP\1.1.0\Device\Include\TM4C123
 
 <h2>Collection of Component Files used:</h2>
 
@@ -59,7 +77,7 @@ Package Vendor: Keil
       Include file:  Device\Include\TM4C123\TM4C123.h
       Source file:   Device\Source\ARM\startup_TM4C123.s
       Source file:   Device\Source\system_TM4C123.c
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
