--- a/SIM900_SMSReceive_TM4C123/Objects/BlankProjekt_TM4C.build_log.htm
+++ b/SIM900_SMSReceive_TM4C123/Objects/BlankProjekt_TM4C.build_log.htm
@@ -26,29 +26,8 @@ Project File Date:  06/13/2017
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 3 (build 300)', folder: 'F:\0_Tools\Keil_v5\ARM\ARMCC\Bin'
-Rebuild target 'Target 1'
-compiling GSM.c...
-GSM.c(99): warning:  #177-D: variable "message" was declared but never referenced
-  	char message[200];
-GSM.c(100): warning:  #177-D: variable "continue_reading" was declared but never referenced
-  	char continue_reading = 1;
-GSM.c(101): warning:  #177-D: variable "index" was declared but never referenced
-  	char index = 0;
-GSM.c(102): warning:  #177-D: variable "time" was declared but never referenced
-  	uint32_t time = 500000;
-GSM.c: 4 warnings, 0 errors
-compiling main.c...
-main.c(34): warning:  #177-D: variable "GSMcommand" was declared but never referenced
-  	uint8_t *GSMcommand;
-main.c: 1 warning, 0 errors
-compiling pc_display.c...
-compiling uart_handler.c...
-assembling startup_TM4C123.s...
-compiling uartstdio.c...
-compiling system_TM4C123.c...
-linking...
-Program Size: Code=6700 RO-data=2092 RW-data=1644 ZI-data=12356  
-".\Objects\BlankProjekt_TM4C.axf" - 0 Error(s), 5 Warning(s).
+Build target 'Target 1'
+".\Objects\BlankProjekt_TM4C.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -77,7 +56,7 @@ Package Vendor: Keil
       Include file:  Device\Include\TM4C123\TM4C123.h
       Source file:   Device\Source\ARM\startup_TM4C123.s
       Source file:   Device\Source\system_TM4C123.c
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
