working on 8 bit version of serial interface

--- a/ST7066U_LcdDriver_SN74HC595N_ShiftRegister_TM4C123_8bitMode/Objects/Output.build_log.htm
+++ b/ST7066U_LcdDriver_SN74HC595N_ShiftRegister_TM4C123_8bitMode/Objects/Output.build_log.htm
@@ -22,11 +22,14 @@ Dialog DLL:      TCM.DLL V1.21.0.0
  
 <h2>Project:</h2>
 C:\Users\alexandru.gaal\Documents\Embedded_Programs\ST7066U_LcdDriver_SN74HC595N_ShiftRegister_TM4C123_8bitMode\ST7066U_LcdDriver_SN74HC595N_ShiftRegister_TM4C123_TivaWare.uvprojx
-Project File Date:  08/14/2017
+Project File Date:  09/04/2017
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
+compiling lcd.c...
+linking...
+Program Size: Code=3540 RO-data=1632 RW-data=8 ZI-data=608  
 ".\Objects\Output.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
