--- a/ST7066U_LcdDriver_SN74HC595N_ShiftRegister_TM4C123_8bitMode/Objects/Output.build_log.htm
+++ b/ST7066U_LcdDriver_SN74HC595N_ShiftRegister_TM4C123_8bitMode/Objects/Output.build_log.htm
@@ -28,9 +28,12 @@ Project File Date:  09/04/2017
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
 compiling lcd.c...
+lcd.c(114): warning:  #177-D: variable "address"  was declared but never referenced
+  	static uint8_t address = 0x00;
+lcd.c: 1 warning, 0 errors
 linking...
-Program Size: Code=3540 RO-data=1632 RW-data=8 ZI-data=608  
-".\Objects\Output.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=3392 RO-data=1632 RW-data=4 ZI-data=612  
+".\Objects\Output.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
